bounty: mobile alignment fix

--- a/app/assets/v2/css/bounty.css
+++ b/app/assets/v2/css/bounty.css
@@ -345,6 +345,13 @@ a.btn {
   }
 }
 
+@media (max-width: 767.98px) {
+  #right_actions .button--primary {
+    display: inline-block;
+    margin-bottom: 10px;
+  }
+}
+
 @media (max-width: 991.98px) {
   .explorer {
     display: none;
